--- a/WCell.Terminal/WebInterface/index.html
+++ b/WCell.Terminal/WebInterface/index.html
@@ -1,20 +1,29 @@
-﻿ï»¿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>WCell.Terminal v1.0 rev 5</title>
+		<title>WCell.Terminal v1.0</title>
+		<link type="text/css" href="styles/themes/cupertino/ui.all.css" rel="stylesheet" />
 		<link type="text/css" href="styles/terminal.css" rel="stylesheet" />
 		<!--[if lte IE 6]>
 		<link type="text/css" href="styles/terminal-ie6.css" rel="stylesheet" />
 		<![endif]-->
 		<!--[if gte IE 7]>
 		<link type="text/css" href="styles/terminal-ie.css" rel="stylesheet" />
-		<![endif]-->		
+		<![endif]-->
+		<!--[if lte IE 6]>
+		<script type="text/javascript" language="javascript" src="java/ie6pngfix.js"></script>
+		<script type="text/javascript" language="javascript">
+			PNG.fix('.image');
+		</script>
+		<![endif]-->
+		<script type="text/javascript" language="javascript" src="java/jquery-1.4.min.js"></script>
+		<script type="text/javascript" language="javascript" src="java/jquery-ui-1.7.2.min.js"></script>
+		<script type="text/javascript" language="javascript" src="java/terminal.js"></script>
 	</head>
 	<body>
-		<div class="content">
-			<div class="container">
-				<pre class="console">
-                                                                                      
+		<div id="logo"></div>
+		<div id="console">
+			<pre>
 ###  #  ##   ####       ##  ##     #######                       #                ##  
  #  ##  #   #   #        #   #        #                                            #  
  #  ##  #  #             #   #        #                                            #  
@@ -23,7 +32,7 @@
   ##  ##   #      #####  #   #        #    #####  #    #  #  #   #   #   #  ####   #  
   ##  ##    #   # #      #   #        #    #      #    #  #  #   #   #   #  #  #   #  
    #  #      ####  #### ### ### ##   ###    #### ###  ######### ### ### ### ##### ### 
-
+=============================================================================================================================================================================================================
 (11:20) <AuthServer> (00:00:22.0436) [Info] IPC Service started successfully.
 (11:20) <RealmServer> (00:00:23.0590) [Info] Step:  'Initializing World' (00:03.707)
 (11:20) <RealmServer> (00:00:26.0947) [Info] Step:  'Initialize Spells (2)' (00:03.355)
@@ -76,10 +85,8 @@
 (11:20) <RealmServer> (00:00:34.0842) [Info] Server is ready for connections!
 (11:20) <RealmServer> Loading Items...
 (11:20) <AuthServer> (00:00:36.0778) [Info] New Realm registered: WCell Heroes (at 127.0.0.1:8085)
-(11:20) <RealmServer> Console ready. Type ? for help                                                                                      
-                                                                                      
-				</pre>
-			</div>
+(11:20) <RealmServer> Console ready. Type ? for help
+			</pre>
 		</div>
 	</body>
 </html>
